Aplicación de cambios 11

--- a/Pages/Bebidas.xaml
+++ b/Pages/Bebidas.xaml
@@ -7,6 +7,9 @@
              x:Class="Marthas_Coffee_App_Movil.Pages.Bebidas"
              
              Title="Bebidas">
+
+    <ScrollView>
+        
     <!-- Definimos el color de fondo de nuestra pagina -->
 
     <VerticalStackLayout Padding="5,5,5,5" BackgroundColor="#6A4512" >
@@ -257,6 +260,8 @@
 
         </VerticalStackLayout>
     </VerticalStackLayout>
+
+    </ScrollView>
 
 </ContentPage>
 
