--- a/Pages/Bocadillos.xaml
+++ b/Pages/Bocadillos.xaml
@@ -4,6 +4,8 @@
              x:Class="Marthas_Coffee_App_Movil.Pages.Bocadillos"
              Title="Bocadillos">
 
+    <ScrollView>
+
     <!-- Definimos el color de fondo de nuestra pagina -->
 
     <VerticalStackLayout Padding="5,5,5,5" BackgroundColor="#6A4512" >
@@ -253,5 +255,7 @@
         </VerticalStackLayout>
 
     </VerticalStackLayout>
+
+    </ScrollView>
 
 </ContentPage>
