--- a/Pages/Postre.xaml
+++ b/Pages/Postre.xaml
@@ -8,6 +8,8 @@
              
              Title="Postres">
 
+    <ScrollView>
+
     <!-- Definimos el color de fondo de nuestra pagina -->
 
     <VerticalStackLayout Padding="5,5,5,5" BackgroundColor="#6A4512" >
@@ -256,5 +258,7 @@
         </VerticalStackLayout>
 
     </VerticalStackLayout>
+
+    </ScrollView>
 
 </ContentPage>
