--- a/Pages/Mochi.xaml
+++ b/Pages/Mochi.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Marthas_Coffee_App_Movil.Pages.Categorias.Postres.Mochi"
              Title="Mochi">
+
+    <ScrollView>
     <!-- Definimos el color de fondo de nuestra pagina -->
 
     <VerticalStackLayout Padding="5,5,5,5" BackgroundColor="#6A4512" >
@@ -59,4 +61,7 @@
 
         </VerticalStackLayout>
     </VerticalStackLayout>
+
+    </ScrollView>
+    
 </ContentPage>
